--- a/example/android/app/src/main/res/xml/provider_paths.xml
+++ b/example/android/app/src/main/res/xml/provider_paths.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
+<paths>
     <!-- 这个是保存拍照图片的路径,必须配置。 -->
     <external-path
-        name="external_files"
-        path="Pictures/camera" />
+        name="my_images"
+        path="/" />
 
-    <external-path
-        name="images"
-        path="Pictures" />
-
-    <external-path
-        name="external_files"
-        path="." />
+<!--    external-path 指定Uri共享的目录-->
+<!--    name 属性值，可以随便填-->
+<!--    path 共享的具体路径-->
 </paths>
